--- a/nav.config.yaml
+++ b/nav.config.yaml
@@ -6,7 +6,7 @@
 # 问题反馈：xjh22222228@gmail.com ，非授权不接收功能建议
 # 联系授权：https://official.nav3.cn/pricing
 # 免责声明：使用即表示已阅读 https://official.nav3.cn/disclaimers
-
+# token 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
 # 仓库地址，填写 Fork 后的仓库地址，支持 Gitee / GitHub / GitLab
 # 作者 Gitee 仓库地址 https://gitee.com/xiejiahe/nav
 # 作者 GitLab 仓库地址 https://gitlab.com/xjh22222228/nav?projectId=68880543, projectId 是项目 ID，可在仓库页面中找到
